--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <li>It takes years of effort to be an expert somewhere.</li>
             <li><em>A comfort zone is a beautiful place. But nothing ever grows here.</em></li>
             <li>Always set a deadline to a task or goal.</li>
-            <li><strong>Aways start with the most annoying tasks first.</strong></li>
+            <li><strong>Always start with the most annoying tasks first.</strong></li>
             <li>Break down big tasks into smaller tasks.</li>
             <li>If you think something will take you N days/hours to finish, plan that it will take you 2*N.</li>
             <li>Never be late on tasks.</li>
