--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                 </tr>
                 <tr>
                     <td>Similarity measure of time-based event sequence data</td>
-                    <td>Improve similarity measure and visualization of time-based event sequence data for the predictive maintenance of business jets. <em>End of engineering study project</em></td>
+                    <td>Improve similarity measure and visualization of time-based event sequence data for the
+                        predictive maintenance of business jets. <em>End of engineering study project</em></td>
                     <td></td>
                     <td><span class="nowrap">Oct. 2023</span></td>
                 </tr>
@@ -154,7 +155,7 @@
         <hr>
 
         <div class="center">
-            <p>Built with care in front of a computer.</p>
+            <p>Built with care.</p>
         </div>
     </div>
 
