update page layout

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
 
         <img class="img-large" src="assets/images/hiring_leopnt_consequences_large.excalidraw.svg" alt="Diagram Large">
         <img class="img-small" src="assets/images/hiring_leopnt_consequences_small.excalidraw.svg" alt="Diagram Small">
         <div class="center"><u>What happens when you hire Léo Poinet</u></div>
 
+        <br>
+        <br>
+        <br>
         <h2>Professional experiences</h2>
         <div class="table-scroll">
             <table>
@@ -73,6 +78,9 @@
         </div>
         <p class="center"><u>Léo Poinet's professional experiences</u></p>
 
+        <br>
+        <br>
+        <br>
         <h2>Personal projects</h2>
         <div class="table-scroll">
             <table>
@@ -121,6 +129,9 @@
         </div>
         <p class="center"><u>Léo Poinet's personal projects</u></p>
 
+        <br>
+        <br>
+        <br>
         <h2>Random facts and vision</h2>
         <p>At time of writing...</p>
         <ul>
@@ -146,11 +157,15 @@
             <li>Nature is beautiful.</li>
         </ul>
 
+        <br>
+        <br>
+        <br>
         <h2>Contact</h2>
         <p>
-            <em><u>poinetleo at gmail dot com</u></em>
+            <em>poinetleo at gmail dot com</em>
         </p>
 
+        <br>
         <br>
         <hr>
 
