update page layout

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <ul>
             <li>Don't give a f***.</li>
             <li>There are the things you can control and the things you cannot.</li>
-            <li>Be a gentleman with people.</li>
+            <li>Be a gentleman.</li>
             <li>Simplicity is hard to achieve.</li>
             <li>Make things simple.</li>
             <li>The world may prefer quantity over quality.</li>
