--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <li>Don't give a f***.</li>
             <li>There are the things you can control and the things you cannot.</li>
             <li>Be a gentleman.</li>
+            <li>Be humble.</li>
             <li>Simplicity is hard to achieve.</li>
             <li>Make things simple.</li>
             <li>The world may prefer quantity over quality.</li>
@@ -155,6 +156,8 @@
             <li>Computers are good at automating easy and repetitive tasks.</li>
             <li>AI is good at automating complex but predictable tasks.</li>
             <li>Nature is beautiful.</li>
+            <li><em>A healthy mind in a healthy body.</em></li>
+            <li>Live with the body, not with the mind.</li>
         </ul>
 
         <br>
