--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <img class="img-large" src="assets/images/hiring_leopnt_consequences_large.excalidraw.svg" alt="Diagram Large">
         <img class="img-small" src="assets/images/hiring_leopnt_consequences_small.excalidraw.svg" alt="Diagram Small">
-        <div class="center"><u>What happens when you hire Léo Poinet</u></div>
+        <div class="center"><u>100% accurate prediction</u></div>
 
         <br>
         <br>
@@ -76,7 +76,7 @@
                 </tr>
             </table>
         </div>
-        <p class="center"><u>Léo Poinet's professional experiences</u></p>
+        <p class="center"><u>Professional experiences</u></p>
 
         <br>
         <br>
@@ -127,7 +127,7 @@
                 </tr>
             </table>
         </div>
-        <p class="center"><u>Léo Poinet's personal projects</u></p>
+        <p class="center"><u>Personal projects</u></p>
 
         <br>
         <br>
