--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <tr>
                     <td>Data and Project Engineer</td>
                     <td>Air France Hop</td>
-                    <td>Manage data projects with technical teams and flight safety department</td>
+                    <td>Manage data projects with cross-functional teams and flight safety department</td>
                     <td><span class="nowrap">Dec. 2024</span></td>
                     <td></td>
                 </tr>
