--- a/index.html
+++ b/index.html
@@ -135,7 +135,8 @@
         <h2>Random facts and vision</h2>
         <p>At time of writing...</p>
         <ul>
-            <li>Don't give a f***.</li>
+            <li><em>A healthy mind in a healthy body.</em></li>
+            <li>Live with the body, not with the mind.</li>
             <li>There are the things you can control and the things you cannot.</li>
             <li>Be a gentleman.</li>
             <li>Be humble.</li>
@@ -148,7 +149,7 @@
             <li>Always set a deadline to a task or goal.</li>
             <li><strong>Always start with the most annoying tasks first.</strong></li>
             <li>Break down big tasks into smaller tasks.</li>
-            <li>If you think something will take you N days/hours to finish, plan that it will take you 2*N.</li>
+            <li>If you think something will take you N months/days/hours to finish, plan that it will take you 2*N.</li>
             <li>Never be late on tasks.</li>
             <li>You cannot do everything. Choose carefully.</li>
             <li><em>The difference between science and messing around is "writing it down."</em></li>
@@ -156,8 +157,6 @@
             <li>Computers are good at automating easy and repetitive tasks.</li>
             <li>AI is good at automating complex but predictable tasks.</li>
             <li>Nature is beautiful.</li>
-            <li><em>A healthy mind in a healthy body.</em></li>
-            <li>Live with the body, not with the mind.</li>
         </ul>
 
         <br>
