--- a/index.html
+++ b/index.html
@@ -14,20 +14,10 @@
         <h1>Léo Poinet's portfolio</h1>
         Passionate engineer. I like to design and build simple things that meet our needs.
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <img class="img-large" src="assets/images/drawn_overview_large.png" alt="Drawn overview">
+        <img class="img-small" src="assets/images/drawn_overview_small.png" alt="Drawn overview">
 
-        <img class="img-large" src="assets/images/hiring_leopnt_consequences_large.excalidraw.svg" alt="Diagram Large">
-        <img class="img-small" src="assets/images/hiring_leopnt_consequences_small.excalidraw.svg" alt="Diagram Small">
-        <div class="center"><u>100% accurate prediction</u></div>
-
-        <br>
-        <br>
-        <br>
-        <h2>Professional experiences</h2>
+        <h2>Professional experience</h2>
         <div class="table-scroll">
             <table>
                 <tr>
@@ -40,28 +30,28 @@
                 <tr>
                     <td>Data and Project Engineer</td>
                     <td>Air France Hop</td>
-                    <td>Manage data projects with cross-functional teams and flight safety department</td>
+                    <td>Drive data projects with cross-functional teams and flight safety department</td>
                     <td><span class="nowrap">Dec. 2024</span></td>
                     <td></td>
                 </tr>
                 <tr>
                     <td>Computer Vision Engineer Intern</td>
                     <td>Beckman Coulter Biomedical GmbH</td>
-                    <td>Develop a sample tube type recognition software with a dedicated team of 5 people</td>
+                    <td>Build a sample tube type recognition software with a dedicated team of 5 people</td>
                     <td><span class="nowrap">April 2024</span></td>
                     <td><span class="nowrap">Sept. 2024</span></td>
                 </tr>
                 <tr>
                     <td>Software Engineer Intern</td>
                     <td>SNCF Voyageurs</td>
-                    <td>Develop a schedule helper tool for the team in charge of trains cleanliness</td>
+                    <td>Build a schedule helper tool for the team in charge of trains cleanliness</td>
                     <td><span class="nowrap">May 2023</span></td>
                     <td><span class="nowrap">Aug. 2023</span></td>
                 </tr>
                 <tr>
                     <td>Chief Information Officer</td>
                     <td>IdéSYS</td>
-                    <td>Manage "Junior Entreprise" IT systems and GDPR compliance</td>
+                    <td>Lead "Junior Entreprise" IT systems and GDPR compliance</td>
                     <td><span class="nowrap">Jan. 2022</span></td>
                     <td><span class="nowrap">Jan. 2023</span></td>
                 </tr>
@@ -76,7 +66,7 @@
                 </tr>
             </table>
         </div>
-        <p class="center"><u>Professional experiences</u></p>
+        <p class="center"><u>Professional experience</u></p>
 
         <br>
         <br>
@@ -91,7 +81,7 @@
                     <th>Date Begin</th>
                 </tr>
                 <tr>
-                    <td>CDM</td>
+                    <td>MMS</td>
                     <td>Build an IOT device to get driving and road insights</td>
                     <td></td>
                     <td><span class="nowrap">Jan. 2025</span></td>
