update intro text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <div class="page">
         <h1>Léo Poinet's portfolio</h1>
         Passionate engineer. I like to design and build simple things that meet our needs.
+        <br>
+        I also love learning about nature, people, and exploring new music.
 
         <img class="img-large" src="assets/images/drawn_overview_large.png" alt="Drawn overview">
         <img class="img-small" src="assets/images/drawn_overview_small.png" alt="Drawn overview">
