--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <br>
         <br>
         <br>
-        <h2>Personal projects</h2>
+        <h2>Projects</h2>
         <div class="table-scroll">
             <table>
                 <tr>
