move reasearch project to own section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
         <br>
         <br>
         <br>
-        <h2>Projects</h2>
+        <h2>Research Experience</h2>
+        Oct. 2023
+        <div>
+        <h4>Similarity measure of time-based event sequence data</h4>
+        R&D project at Polytech Nantes focused on maintenance of a Dassault Aviation business jet fleet. The goal was to improve similarity measurement between actual and theoretical maintenance histories and create an interactive visualization to explore differences. Existing methods were adapted and combined to handle temporal events. The proposed solution works but has scalability limitations, leaving room for future optimizations.
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <h2>Personal projects</h2>
         <div class="table-scroll">
             <table>
                 <tr>
@@ -95,13 +105,6 @@
                     <td><span class="nowrap">June 2024</span></td>
                 </tr>
                 <tr>
-                    <td>Similarity measure of time-based event sequence data</td>
-                    <td>Improve similarity measure and visualization of time-based event sequence data for the
-                        predictive maintenance of business jets. <em>End of engineering study project</em></td>
-                    <td></td>
-                    <td><span class="nowrap">Oct. 2023</span></td>
-                </tr>
-                <tr>
                     <td>Comment Music Classifier</td>
                     <td>Custom music tagging system for DJs</td>
                     <td><a
@@ -120,6 +123,7 @@
             </table>
         </div>
         <p class="center"><u>Personal projects</u></p>
+
 
         <br>
         <br>
