fix email obfuscation

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <br>
         <h2>Contact</h2>
         <p>
-            <em>poinetleo at gmail dot com</em>
+        <em>poinetleo[at]gmail{dot}com</em>
         </p>
 
         <br>
